se resulve agregar ranchos
